--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@ defaults:
 topics:
   - name: DAMOSET
     web_url: https://schaefer-benjamin.github.io/DAMOSET/
+    image_url: https://raw.githubusercontent.com/schaefer-benjamin/schaefer-benjamin.github.io/master/eu.png
 
 projects:
   sort_by: pushed
