--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,12 @@ topics:
     web_url: https://schaefer-benjamin.github.io/DAMOSET/
     image_url: https://raw.githubusercontent.com/schaefer-benjamin/schaefer-benjamin.github.io/master/eu.png
 
+  - name: Institute website
+    web_url: https://www.qmul.ac.uk/maths/profiles/schaeferb.html
+    image_url: https://raw.githubusercontent.com/schaefer-benjamin/schaefer-benjamin.github.io/master/QMUL.PNG
+
+
+
 projects:
   sort_by: pushed
   # sort_by options:
