--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ topics:
     image_url: https://raw.githubusercontent.com/schaefer-benjamin/schaefer-benjamin.github.io/master/eu.png
 
   - name: Institute website
-    web_url: https://www.qmul.ac.uk/maths/profiles/schaeferb.html
+    web_url: https://www.nmbu.no/ans/benjamin.schaefer
     image_url: https://raw.githubusercontent.com/schaefer-benjamin/schaefer-benjamin.github.io/master/QMUL.PNG
 
 
