--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ topics:
 
   - name: Institute website
     web_url: https://www.nmbu.no/ans/benjamin.schaefer
-    image_url: https://raw.githubusercontent.com/schaefer-benjamin/schaefer-benjamin.github.io/master/QMUL.PNG
+    image_url: https://raw.githubusercontent.com/schaefer-benjamin/schaefer-benjamin.github.io/master/logo.png
 
 
 
