--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ topics:
     image_url: https://raw.githubusercontent.com/schaefer-benjamin/schaefer-benjamin.github.io/master/eu.png
 
   - name: Institute website
-    web_url: https://www.nmbu.no/emp/benjamin.schaefer
-    image_url: https://raw.githubusercontent.com/schaefer-benjamin/schaefer-benjamin.github.io/master/logo.png
+    web_url: https://www.iai.kit.edu/english/2154_4101.php
+    image_url: https://raw.githubusercontent.com/schaefer-benjamin/schaefer-benjamin.github.io/master/kit_logo_V2.svg
 
 
 
