--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,10 @@ defaults:
       layout: "post"
 
 topics:
+  - name: DRACOS
+    web_url: https://schaefer-benjamin.github.io/DRACOS
+    image_url: https://raw.githubusercontent.com/schaefer-benjamin/DRACOS/main/Helmholtz-Logo-(English).jpg
+  
   - name: DAMOSET
     web_url: https://schaefer-benjamin.github.io/DAMOSET/
     image_url: https://raw.githubusercontent.com/schaefer-benjamin/schaefer-benjamin.github.io/master/eu.png
@@ -24,7 +28,6 @@ topics:
   - name: Institute website
     web_url: https://www.iai.kit.edu/english/2154_4101.php
     image_url: https://raw.githubusercontent.com/schaefer-benjamin/schaefer-benjamin.github.io/master/kit_logo_V2.svg
-
 
 
 projects:
