--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ topics:
     
    - name: personal website
     web_url: https://www.iai.kit.edu/english/2154_4101.php
-    image_url: https://avatars.githubusercontent.com/u/69460362?s=400&u=9df652a752526385fe1744652f39625c3f7fd6f3&v=4
+    image_url: https://raw.githubusercontent.com/schaefer-benjamin/schaefer-benjamin.github.io/master/Benjamin%20Sch%C3%A4fer_2022.jpg
     
    - name: DRACOS
     web_url: https://schaefer-benjamin.github.io/DRACOS
