--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ topics:
     
    - name: personal website
     web_url: https://www.iai.kit.edu/english/2154_4101.php
-    image_url: https://raw.githubusercontent.com/schaefer-benjamin/schaefer-benjamin.github.io/master/Benjamin%20Sch%C3%A4fer_2022.jpg
+    image_url: https://raw.githubusercontent.com/schaefer-benjamin/schaefer-benjamin.github.io/master/benjamin2022.jpg
     
    - name: DRACOS
     web_url: https://schaefer-benjamin.github.io/DRACOS
