--- a/_config.yml
+++ b/_config.yml
@@ -17,12 +17,8 @@ defaults:
       layout: "post"
 
 topics:
-   - name: Institute website
-    web_url: https://www.iai.kit.edu/english/2154_4101.php
-    image_url: https://raw.githubusercontent.com/schaefer-benjamin/schaefer-benjamin.github.io/master/kit_logo_V2.svg
-    
    - name: personal website
-    web_url: https://www.iai.kit.edu/english/2154_4101.php
+    web_url: https://www.benjaminschaefer.org
     image_url: https://raw.githubusercontent.com/schaefer-benjamin/schaefer-benjamin.github.io/master/benjamin2022.jpg
     
    - name: DRACOS
