--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-layout: sidebar
+Inlayout: sidebar
 style: light
 
 plugins:
@@ -17,9 +17,6 @@ defaults:
       layout: "post"
 
 topics:
-   - name: personal website
-    web_url: https://www.benjaminschaefer.org
-   
    - name: DRACOS
     web_url: https://schaefer-benjamin.github.io/DRACOS
     image_url: https://raw.githubusercontent.com/schaefer-benjamin/DRACOS/main/Helmholtz-Logo.jpg
@@ -27,7 +24,6 @@ topics:
    - name: DAMOSET
     web_url: https://schaefer-benjamin.github.io/DAMOSET/
     image_url: https://raw.githubusercontent.com/schaefer-benjamin/schaefer-benjamin.github.io/master/eu.png
-
 
 
 projects:
