--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,10 @@ topics:
     web_url: https://schaefer-benjamin.github.io/DAMOSET/
     image_url: https://raw.githubusercontent.com/schaefer-benjamin/schaefer-benjamin.github.io/master/eu.png
 
+   - name: DRACOS
+    web_url: https://schaefer-benjamin.github.io/DRACOS
+    image_url: https://raw.githubusercontent.com/schaefer-benjamin/DRACOS/main/Helmholtz-Logo.jpg
+    
   - name: Personal website
     web_url: https://benjaminschaefer.org
     image_url: https://raw.githubusercontent.com/schaefer-benjamin/schaefer-benjamin.github.io/master/benjamin2022.jpg
